[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ale-py>=0.10.1,<=0.11.0",
    "dotenv>=0.9.9",
    "gymnasium[box2d,classic-control]>=1.1.1",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "numpy>=1.24.4",
    "pip>=25.0.1",
    "swig>=4.3.1",
    "torch>=2.5.1",
    "wandb>=0.19.9",
]


[tool.ruff]
line-length = 127

[dependency-groups]
dev = [
    "pytype>=2024.9.13",
]